  to IP addresses when object name is an IP address
- Windows console: Fixed bug with MDI window position restoration when
  window is maximized
- Windows console: Fixed bug with duplication of child window title in
  parent's title when child is maximized
- Windows console: Status icons now placed over object icons in
  object browser


*
* 0.1.7
*

- Added more customized events for threshold violation
- Added ability to send Wake-On-LAN packets to managed nodes
- Fixed serious bug in DCI copy


*
* 0.1.6
*

- Added parameter System.ServiceState(*) to core agent (Windows only)
- Implemented user-defined counters in WinPerf subagent
- Added support for macros in e-mail subject
- Added support for data collection item duplication within same node
- Now possible to copy DCIs to many nodes at once
- Fixed memory management bugs in Windows console DCI editor
- Added "instance" field to DCI which can be used as information text in
  user-defined data collection events and alarms
- Client library do cleanup after NXCDisconnect()
- User system rights now ORed with its group(s) system rights
- Added database checking/upgrade utility (nxdbmgr)


*
* 0.1.5
*

- Object access mutexes changed to read/write locks in server to 
  improve performance
- Algorithm of placing nodes into subnets improved
- System no longer needs network mask when creating new node manually
- Detection of incorrect network masks on interfaces added
- Windows console: fixed bug in object browser which cause console to crash
- Added internal statistics collection for average data collector queue length
  and average database writer queue length
- All IP addresses now stored in database as text
- Added external event sender (nxevent)
- Fixed bug with user password change (new password was not saved to database)
- Configuration script ("configure") improved


*
* 0.1.4
*

- Created performance subagent for Windows (winperf.nsm)
- Added SNMP OID to node type translation